# test_project_miss_x

./: .gitignore  RAEDME.md  db.sqlite3  pyproject.toml
config/: settings.py
main/: models.py  tests.py  urls.py  views.py
main/management/commands/: csu.py  test_bd.py
main/migrations/: 0001_initial.py  0002_alter_form_phone_field.py  0003_alter_form_phone_field.py  0004_alter_form_phone_field.py
